Stabilize reporting and security tests